[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/ds_inspector_gd3/DebugFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/ds_inspector_gd3/Attributes/Vector2Attr.gd" type="Script" id=2]

[node name="Vector2Attr" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -10.0
script = ExtResource( 2 )

[node name="Name" type="Label" parent="."]
margin_right = 762.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 4.0
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 766.0
margin_right = 1910.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 533.0
margin_right = 12.0
margin_bottom = 547.0
text = "X:"

[node name="XLineEdit" type="LineEdit" parent="HBoxContainer"]
margin_left = 16.0
margin_right = 570.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 6.0
custom_fonts/font = ExtResource( 1 )
virtual_keyboard_type = 2

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_left = 574.0
margin_top = 533.0
margin_right = 585.0
margin_bottom = 547.0
text = "Y:"

[node name="YLineEdit" type="LineEdit" parent="HBoxContainer"]
margin_left = 589.0
margin_right = 1144.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 6.0
custom_fonts/font = ExtResource( 1 )
virtual_keyboard_type = 2
